--- a/src/components/pages/Products/products.page.scss
+++ b/src/components/pages/Products/products.page.scss
@@ -45,7 +45,4 @@
 			place-items: center;
 		}
 	}
-	.sidenav {
-		margin-right: 2%;
-	}
 }
